src/objects/Practice_Area__c.object
<CustomObject>
    <description>Use by taxonomy to provide AECOM Work (formerly called Market Segment/Practice ) information.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Notes about changes</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Helps figure out which ones are still in use. Manually flagged.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>AECOM Work</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>AECOM Work</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AECOM Work</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>